# web-portal

./: .dockerignore  .flake8  .gitignore  .run-tool.yml  CHANGELOG.md  Dockerfile  LICENSE  README.md  THIRD-PARTY.txt  docker-compose.yml  mkdocs.yml  pyproject.toml  pytest.ini  requirements-dev.txt  requirements-docs.txt  requirements.txt
.github/workflows/: codeql-analysis.yml  docker-publish.yml  docs-publish.yml  python-app.yml  tests.yml
docs/: configuration.md  deployment.md  index.md
docs/developers/: building-plugins.md  index.md  plugin-reference.md
docs/users/: administration.md  index.md  install.md  upgrading.md  usage.md
plugins/core/: __init__.py  helpers.py  models.py  views.py  widgets.py
plugins/core/static/: core.css
plugins/core/templates/core/: index.jinja  upload-icons.jinja
plugins/core/templates/core/engines/: edit.jinja  index.jinja  new.jinja
plugins/core/templates/core/includes/widgets/: link.jinja
plugins/core/templates/core/includes/widgets-editor/: link.jinja  search.jinja
plugins/core/templates/core/links/: new.jinja
plugins/core_extras/: __init__.py  views.py  widgets.py
plugins/core_extras/templates/core_extras/: index.jinja
plugins/core_extras/templates/core_extras/includes/widgets-editor/: embed_html.jinja  iframe.jinja
scripts/: hash_password.py  health-check.sh  run.sh
src/web_portal/: __main__.py  cache.py  config.py  helpers.py  main.py
src/web_portal/database/: crud.py  models.py
src/web_portal/static/: style.css  theme-changer.js
src/web_portal/templates/: admin.jinja2  base.jinja2  login.jinja2  portal.jinja2
src/web_portal/templates/shared/: base.jinja2
src/web_portal/templates/shared/includes/: flashed-messages.jinja2  options-color.jinja2  panels.jinja2
src/web_portal/views/: admin.py  login.py  portal.py
tests/: conftest.py  test_cache.py  test_views.py
tests/test_core/: test_validation.py
web_portal/: config.py  helpers.py  import_export.py  main.py  plugin_api.py
web_portal/core/: auth.py  config.py  constants.py  demo.py  helpers.py  import_export.py  plugin.py  validation.py
web_portal/database/: crud.py  models.py
web_portal/plugins/core/: __init__.py  helpers.py  models.py  views.py  widgets.py
web_portal/plugins/core/static/: core.css  core.js
web_portal/plugins/core/templates/core/: index.jinja  links.jinja  upload-icons.jinja
web_portal/plugins/core/templates/core/engines/: index.jinja  new.jinja
web_portal/plugins/core/templates/core/includes/: embed_html-widget-edit.jinja  head.jinja  iframe-widget-edit.jinja  link-widget-edit.jinja  link-widget.jinja  search-widget-edit.jinja  search-widget.jinja
web_portal/plugins/core/templates/core/includes/widgets/: clock.jinja
web_portal/plugins/core/templates/core/includes/widgets-editor/: embed_html.jinja  iframe.jinja  link.jinja
web_portal/plugins/core/templates/core/links/: edit.jinja  index.jinja  new.jinja
web_portal/plugins/core_extras/: views.py
web_portal/plugins/core_extras/templates/core_extras/: index.jinja
web_portal/plugins/core_extras/templates/core_extras/includes/widgets/: iframe.jinja
web_portal/plugins/web_links/: __init__.py  models.py  views.py  widgets.py
web_portal/plugins/web_links/static/: web_links.css
web_portal/plugins/web_links/templates/web_links/: index.jinja  links.jinja  widget.jinja
web_portal/plugins/web_links/templates/web_links/includes/: head.jinja  link-widget-edit.jinja  link-widget.jinja  search-widget.jinja
web_portal/plugins/web_links/templates/web_links/links/: new.jinja
web_portal/static/: colors.css  script.js  style.css  theme-changer.js  theme-changer.min.js
web_portal/templates/: admin.jinja2  edit.jinja  login.jinja  login.jinja2  plugins.jinja  portal.jinja  portal.jinja2
web_portal/templates/admin/: index.jinja  index.jinja2  system-settings.jinja  users.jinja  users.jinja2  widgets.jinja2
web_portal/templates/install/: admin-user.jinja  config.jinja  finish.jinja  guest-user.jinja  index.jinja
web_portal/templates/settings/: account.jinja  dashboard-edit.jinja  dashboard-widget-edit.jinja  index.jinja
web_portal/templates/shared/: base.jinja  base.jinja2  macros.jinja  macros.jinja2  no-nav.jinja
web_portal/templates/shared/includes/: options-color.jinja  options-color.jinja2  options-groups.jinja  options-users.jinja2  options-widgets.jinja2  panels.jinja2
web_portal/views/: admin.py  install.py  login.py  portal.py  settings.py
