[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "web-portal"
dynamic = ["version"]
description = ''
readme = "README.md"
requires-python = ">=3.11"
license = "AGPL-3.0-only"
keywords = []
authors = [
  { name = "Leo Spratt", email = "contact@enchantedcode.co.uk" },
]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: Implementation :: CPython",
]
dependencies = [
  "quart~=0.19.4",
  "quart-auth~=0.8.0",
  "tortoise-orm[aiomysql]~=0.19.3",
  "pydantic[dotenv]~=1.10.9",
  "web-health-checker~=1.3.1",
  "packaging~=23.1",
]

[tool.hatch.envs.default.scripts]
serve = "hypercorn \"web_portal.main:create_app()\""

[tool.hatch.envs.docs]
dependencies = [
  "mkdocs~=1.4.3",
  "mkdocstrings[python]~=0.22.0",
  "mkdocs-material~=9.1.16",
]

[tool.hatch.envs.docs.scripts]
build = "mkdocs build --clean"
serve = "mkdocs serve"

[tool.hatch.envs.dev]
dependencies = [
  "flake8~=6.0.0",
  "pytest~=7.4.0",
  "pytest-asyncio~=0.21.0",
  "pytest-env~=0.8.2",
]

[project.urls]
Documentation = "https://webportal.docs.enchantedcode.co.uk/"
Issues = "https://github.com/enchant97/web-portal/issues"
Source = "https://github.com/enchant97/web-portal"

[tool.hatch.version]
path = "web_portal/__init__.py"
