[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "web-portal"
dynamic = ["version"]
description = ''
readme = "README.md"
requires-python = ">=3.11"
license = "AGPL-3.0-only"
keywords = []
authors = [
  { name = "Leo Spratt", email = "contact@enchantedcode.co.uk" },
]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: Implementation :: CPython",
]
dependencies = [
  "quart~=0.19.4",
  "quart-auth~=0.9.0",
  "tortoise-orm[aiomysql]~=0.20.0",
  "pydantic~=2.5.3",
  "pydantic-settings~=2.1.0",
  "web-health-checker~=1.3.1",
  "packaging~=23.2",
]

[tool.hatch.envs.default.scripts]
serve = "hypercorn \"web_portal.main:create_app()\""

[tool.hatch.envs.docs]
dependencies = [
  "mkdocs~=1.5.3",
  "mkdocstrings[python]~=0.24.0",
  "mkdocs-material~=9.5.4",
]

[tool.hatch.envs.docs.scripts]
build = "mkdocs build --clean"
serve = "mkdocs serve"

[tool.hatch.envs.dev]
dependencies = [
  "pytest~=7.4.4",
  "pytest-asyncio~=0.23.3",
  "pytest-env~=1.1.3",
]

[tool.hatch.envs.dev.scripts]
unit-test = "pytest ./tests"
lint = "hatch fmt --check"

[project.urls]
Documentation = "https://webportal.docs.enchantedcode.co.uk/"
Issues = "https://github.com/enchant97/web-portal/issues"
Source = "https://github.com/enchant97/web-portal"

[tool.hatch.version]
path = "web_portal/__init__.py"

[tool.ruff]
line-length=100
src = ["web_portal", "tests"]
ignore = ["TID252", "EM101", "EM102", "S101", "TRY003", "N818"]
ignore-init-module-imports = true

[tool.ruff.per-file-ignores]
"web_portal/plugin_api.py" = ["F401"]

[tool.pytest.ini_options]
asyncio_mode="strict"
env = [
  "DB_URI=sqlite://:memory:",
  "DATA_PATH=./data",
  "SECRET_KEY=pytest-testing",
  "SECURE_COOKIES=0",
]
