[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "web-portal"
dynamic = ["version"]
description = ''
readme = "README.md"
requires-python = ">=3.11"
license = "AGPL-3.0-only"
keywords = []
authors = [
  { name = "Leo Spratt", email = "contact@enchantedcode.co.uk" },
]
classifiers = [
  "Private :: Do Not Upload",
  "Development Status :: 5 - Production/Stable",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: Implementation :: CPython",
]
dependencies = [
  "quart~=0.19.6",
  "quart-auth~=0.10.1",
  "tortoise-orm[aiomysql]~=0.21.7",
  "pydantic~=2.9.2",
  "pydantic-settings~=2.5.2",
  "web-health-checker~=1.3.1",
  "packaging~=24.1",
]

[tool.hatch.envs.default.scripts]
serve = "hypercorn \"web_portal.main:create_app()\""

[tool.hatch.envs.docs]
dependencies = [
  "mkdocs~=1.6.1",
  "mkdocstrings[python]~=0.26.2",
  "mkdocs-material~=9.5.41",
]

[tool.hatch.envs.docs.scripts]
build = "mkdocs build --clean"
serve = "mkdocs serve"

[tool.hatch.envs.dev]
dependencies = [
  "pytest~=8.3.3",
  "pytest-asyncio~=0.24.0",
  "pytest-env~=1.1.5",
]

[tool.hatch.envs.dev.scripts]
unit-test = "pytest ./tests"
lint = "hatch fmt --check"

[project.urls]
Documentation = "https://webportal.docs.enchantedcode.co.uk/"
Issues = "https://github.com/enchant97/web-portal/issues"
Source = "https://github.com/enchant97/web-portal"

[tool.hatch.version]
path = "web_portal/__init__.py"

[tool.ruff]
line-length=100
src = ["web_portal", "tests"]
ignore = ["TID252", "EM101", "EM102", "S101", "TRY003", "N818"]
ignore-init-module-imports = true

[tool.ruff.per-file-ignores]
"web_portal/plugin_api.py" = ["F401"]

[tool.pytest.ini_options]
asyncio_mode="strict"
asyncio_default_fixture_loop_scope = "session"
env = [
  "DB_URI=sqlite://:memory:",
  "DATA_PATH=./data",
  "SECRET_KEY=pytest-testing",
  "SECURE_COOKIES=0",
]
